# docker-lamp

./: .gitignore  Dockerfile  ItDoesNotHvesBooksDelta(Heidi Normal).sql  ItHasBooks.sql  NoHahas(My Admin, ANormal).sql  README.md  cert3.pem  database.sql  db_pass.txt  default-ssl.conf  docker-compose.yml  encr_pswd.txt  key.pem  notas rapidas  php.ini  update_password.py
CSS/: catalogo.css  index.css  inicio_sesion.css
HTML/: cambiar_datos.html  catalogo.html  index.html  inicio_sesion.html  register.html
app/: a.js  a.php  index.php
app/CSS/: catalogo.css  header.css  index.css  inicio_sesion.css  leer_libro.css  nuevo_libro.css  pagina_libro.css  registro.css
app/HTML/: cambiar_contraseña.html  cambiar_datos.html  cambiar_pswd.html  catalogo.html  header.html  header_small.html  index.html  iniciar_Sesion.html  inicio_sesion.html  inicio_sesion_fallido.html  isfr.html  leer_libro.html  lista_borrar_libros.html  lista_libros_usuarios.html  lista_modificar_libros.html  modificar_libro.html  nuevo_capitulo.html  nuevo_libro.html  opciones_usuario.html  pagina_libro.html  publicar_libro_fallido.html  register.html
app/PHP/: borrar_libros.php  cambiar_contraseña.php  cambiar_datos.php  cambiar_pswd.php  catalogo.php  cerrar_sesion.php  existe_usuario.php  get_contrasena.php  get_titulo.php  leer_libro.php  (+16 more)
ataque/: ataque.md  script.txt
documentacion/: .~lock.Doc.odt#  .~lock.Librerium.odt#  .~lock.Portada.odt#  Doc.odt  Portada.odt  cambio de contraseña.md  diagrama_paginas.drawio  documento.md
mantenimiento-bdd/: Cargo.toml
mantenimiento-bdd/src/: main.rs
(+24 files in other folders)
